# personal-agent-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 202605071800_initial_neon_schema.py  202605091200_fix_agents_slug_index.py
app/: __init__.py  db.py  main.py  models.py  runtime.py  schemas.py  seed.py  settings.py
