[project]
name = "personal-agent-backend"
version = "0.1.0"
description = "FastAPI and LangGraph runtime for the personal planner agent."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
